# CANAC-ATIVIDADE

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/schemas/: weather.py
backend/app/services/: cache_service.py  exceptions.py  weather_service.py
backend/tests/: test_cache.py  test_weather_service_mocked.py
frontend/weather-monitor/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/weather-monitor/app/: globals.css  layout.tsx  page.tsx
frontend/weather-monitor/components/: weather-display.tsx  weather-search.tsx
frontend/weather-monitor/lib/: types.ts  weather-codes.ts
